--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
     <audio id="sound-action-card" src="SOUNDS/HELD.mp3" preload="auto"></audio>
     <div id="main-container">
         <div id="game-container">
-            <h1>SWITCHUP POKER</h1>
+            <h1>SWITCHUP POKER!</h1>
             
             <div id="stats-bar">
                 <div class="stat-box">Credits: <span id="credits-stat">500</span></div>
