Final image transfer push
Final image transfer push

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
     <audio id="sound-action-card" src="SOUNDS/HELD.mp3" preload="auto"></audio>
     <div id="main-container">
         <div id="game-container">
-            <h1>SWITCHUP POKER!</h1>
+            <h1>SWITCHUP POKER</h1>
             
             <div id="stats-bar">
                 <div class="stat-box">Credits: <span id="credits-stat">500</span></div>
@@ -603,9 +603,9 @@
         "Invalid Hand": 0
     };
     
-    // UPDATED ACTION CARD DEFINITIONS WITH NEW NAME
+    // UPDATED ACTION CARD DEFINITIONS: 'UPGRADE.png' CHANGED TO 'booster.png' (lowercase)
     const ACTION_CARD_DEFINITIONS = [
-        { name: "upgrade", display: "BOOSTER", filename: "UPGRADE.png" }, // Renamed UPGRADE to BOOSTER
+        { name: "upgrade", display: "BOOSTER", filename: "booster.png" }, // <--- זה התיקון הסופי של שם הקובץ בקוד
         { name: "mirror_hand", display: "MIRROR HAND", filename: "1.png" },
         { name: "flush_fever", display: "FLUSH FEVER", filename: "FEVER.png" },
     ];
