Final unique name fix for Booster image

--- a/index.html
+++ b/index.html
@@ -603,9 +603,9 @@
         "Invalid Hand": 0
     };
     
-    // UPDATED ACTION CARD DEFINITIONS: 'UPGRADE.png' CHANGED TO 'booster.png' (lowercase)
+    // UPDATED ACTION CARD DEFINITIONS: 'UPGRADE.png' CHANGED TO 'booster_final.png' (lowercase)
     const ACTION_CARD_DEFINITIONS = [
-        { name: "upgrade", display: "BOOSTER", filename: "booster.png" }, // <--- זה התיקון הסופי של שם הקובץ בקוד
+        { name: "upgrade", display: "BOOSTER", filename: "booster_final.png" }, // <--- זה התיקון הסופי של שם הקובץ בקוד
         { name: "mirror_hand", display: "MIRROR HAND", filename: "1.png" },
         { name: "flush_fever", display: "FLUSH FEVER", filename: "FEVER.png" },
     ];
