--- a/index.html
+++ b/index.html
@@ -641,13 +641,13 @@
             }
             .booster-icon {
                 bottom: -40px;
-                left: 50%;
-                transform: translateX(-120%);
+                left: 10%; /* adjusted */
+                transform: translateX(0%);
             }
             .flush-icon {
                 bottom: -40px;
-                left: 50%;
-                transform: translateX(20%);
+                left: 75%; /* adjusted */
+                transform: translateX(0%);
             }
 
 
